finished timeline - added publications -- css adjustment

--- a/src/components/Whoami.astro
+++ b/src/components/Whoami.astro
@@ -21,9 +21,9 @@
 	}
 
 	.link-card {
-	  	margin: 1rem;
+	  	margin: 0;
 		display: block;
-		padding: 2rem;
+		padding: 1rem;
 		background-image: var(--bkg-gradient);
 		background-size: 400%;
 		border-radius: 0.5rem;
