--- a/src/components/Publications.astro
+++ b/src/components/Publications.astro
@@ -1,39 +1,18 @@
 <ul role="list" class="link-card-list">
 	<li class="link-card">
-	<h2>My career</h2>
-		<ul role="list" class="timeline-list">
-			<li class="timeline-item">
-			<p class="">  
-				<h4 class="">2012-2015</h4>
-				<h6>Politecnico di Torino</h6>
+	<h2>My Publications</h2>
+	<ul role="list" class="publication-list">
+			<li class="publication-item">
+			<p class="">
+			<h3>A novel Internet-of-Things infrastructure to support self-healing distribution systems</h3>  
+				<h4 class="">2018</h4>
+				<h6>2018 International Conference on Smart Energy Systems and Technologies (SEST)</h6>
 				Bachelor degree in Physisc Engineering 
 				</p>
 			</li>
-			<li class="timeline-item">
-				<p class="">
-				<h4 class="">2015-2018</h4>
-				<h6>Politecnico di Torino</h6>
-				Master degree in ICT for Smart Societies with the thesis  
-				"Desing and development of a novel smart-meter for improved Smart Grid management"
-				</p>
-			</li>
-			<li class="timeline-item">
-				<p class="">
-				<h4 class="">2018-2019</h4>	
-				<h6>Politecnico di Torino</h6>
-				Assistant researcher for EDA group
-			</p>
-			</li>
-			<li class="timeline-item">
-				<p class="">
-				<h4 class="">2019-ongoing</h4>
-				<h6>Politecnico di Torino</h6>	
-				PhD student in Computer and Control Engineering
-			</p>
-			</li>
-		</ul>
+	</ul>
 	</li>
-</ul>
+	</ul>
 <style>
 :root {
 		--color-border: #a1c8e9 ;
@@ -47,7 +26,6 @@
 		margin: 0;
 		transition: color 0.6s cubic-bezier(0.22, 1, 0.36, 1);
 	}
-
 	.link-card {
 		margin-top: 1rem;
 		margin-bottom: 1rem;
@@ -85,11 +63,12 @@
 		transform: translateX(2px);
 	}
 	
-	.timeline-list{
+	.publication-list{
 		display: block;
+		grid-template-columns: repeat(auto-fit, minmax(24ch, 1fr));
 		gap: 1rem;
 	}
-	.timeline-item{
+	.publication-item{
 		width: 100%;
 		text-decoration: none;
 		line-height: 1.4;
@@ -100,18 +79,19 @@
 		opacity: 0.8;
 		margin-top: 1rem;
 	}
-	.timeline-item > h6{
+	.publication-item > h6{
 		color:grey;
 	}
-	.timeline-item:is(:hover, :focus-within) h4 {
+	.publication-item:is(:hover, :focus-within) h4 {
 		color: #26a1c0 ;
 	}
-	.timeline-item:is(:hover, :focus-within) h6 {
+	.publication-item:is(:hover, :focus-within) h6 {
 		color: #a1c8e9 ;
 	}
-	.timeline-item:hover {
+	.publication-item:hover {
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.74);
 }
 
 
 	</style>
+	
