Added projects and modified publications

--- a/src/components/Presentation.astro
+++ b/src/components/Presentation.astro
@@ -4,7 +4,7 @@
 
 <div class="presentation-grid">
 	<div class="presentation-text">
-		<h1>Hi, i'm <span class="name-gradient">Matteo Orlando</span></h1>
+		<h1>Hi, I'm <span class="name-gradient">Matteo Orlando</span></h1>
 	</div>
 	<div class="presentaion-avatar">
 		<img src={avatar}>
