--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,6 +6,7 @@ import Whoami from '../components/Whoami.astro';
 import Timeline from '../components/Timeline.astro';
 //import Publications from '../components/Publications.astro';
 import Publications from '../components/Publications.vue';
+import Projects from '../components/Projects.astro';
 ---
 
 <Layout title="Matteo Orlando">
@@ -16,10 +17,9 @@ import Publications from '../components/Publications.vue';
 		<!-- <p class="instructions"><strong>Your first mission:</strong> tweak this message to try our hot module reloading. Check the <code>src/pages</code> directory!</p> -->
 
 		<Whoami />
-
-		
 		<Timeline />
 		<Publications/>
+		<Projects/>
 
 	</main>
 </Layout>
