refactor, remove agnostic-vue,avatar.png

--- a/src/components/Presentation.astro
+++ b/src/components/Presentation.astro
@@ -1,5 +1,5 @@
 ---
-	import avatar from '../images/avatar.png';
+	import avatar from '/avatar.jpg';
 ---
 
 <div class="presentation-grid">
@@ -88,7 +88,7 @@
 
 	}
 
-	.presentaion-avatar>img {
+	.presentaion-avatar img {
 		background-size: cover;
 		background-position: center;
 		border-radius: 50%;
@@ -96,5 +96,6 @@
 		box-shadow: 0 0.5em 1em -0.1em var(--color-border);
 		width: 20vw;
 		min-width: 160px;
+        max-width:250px;
 	}
 </style>
