--- a/src/components/Publications.astro
+++ b/src/components/Publications.astro
@@ -1,97 +1,20 @@
-<ul role="list" class="link-card-list">
-	<li class="link-card">
-	<h2>My Publications</h2>
-	<ul role="list" class="publication-list">
-			<li class="publication-item">
-			<p class="">
-			<h3>A novel Internet-of-Things infrastructure to support self-healing distribution systems</h3>  
-				<h4 class="">2018</h4>
-				<h6>2018 International Conference on Smart Energy Systems and Technologies (SEST)</h6>
-				Bachelor degree in Physisc Engineering 
-				</p>
-			</li>
-	</ul>
+---
+import Paper from './Paper.astro'
+//const papers = await Astro.glob("../pages/publications/*.md");
+import { papers } from '../publications.json'
+---
+
+    <li class="link-card">
+      <h2>My Publications</h2>
+
+        {papers.map(paper=> (
+        <Paper title={paper.title} 
+        location={paper.location}
+        href={paper.href}
+        abstract={paper.abstract}
+        >
+        </Paper>
+        ))}
+
 	</li>
-	</ul>
-<style>
-:root {
-		--color-border: #a1c8e9 ;
-		--astro-gradient: linear-gradient(0deg,#4F39FA, #DA62C4);
-		--link-gradient: linear-gradient(45deg, #4F39FA, #DA62C4 30%, var(--color-border) 60%);
-		--night-sky-gradient: linear-gradient(0deg, #392362 -33%, #431f69 10%, #30216b 50%, #1f1638 100%);
-		--matteo-gradient:linear-gradient(0deg, #26a1c0 0%, #2b9efd 33%, #26a1c0 66%, #2b9efd 99%);
-		--bkg-gradient:linear-gradient(45deg, #26a1c0 0%, #a1c8e9  30%, var(--color-border) 60%);
-	}
-	h2 {
-		margin: 0;
-		transition: color 0.6s cubic-bezier(0.22, 1, 0.36, 1);
-	}
-	.link-card {
-		margin-top: 1rem;
-		margin-bottom: 1rem;
-	  	margin-left: 0rem;
-		margin-right: 0rem;
-		display: block;
-		padding: 1rem;
-		background-image: var(--bkg-gradient);
-		background-size: 400%;
-		border-radius: 0.5rem;
-		background-position: 100%;
-		transition: background-position 0.6s cubic-bezier(0.22, 1, 0.36, 1);
-	}
 
-	.link-card > p {
-		width: 100%;
-		text-decoration: none;
-		line-height: 1.4;
-		padding: 1em 1.3em;
-		border-radius: 0.35rem;
-		color: var(--text-color);
-		background-color: white;
-		opacity: 0.8;
-	}
-
-	.link-card:is(:hover, :focus-within) {
-		background-position: 0;
-	}
-
-	.link-card:is(:hover, :focus-within) h2 {
-		color: #fff;
-	}
-
-	.link-card:is(:hover, :focus-within) h2 span {
-		transform: translateX(2px);
-	}
-	
-	.publication-list{
-		display: block;
-		grid-template-columns: repeat(auto-fit, minmax(24ch, 1fr));
-		gap: 1rem;
-	}
-	.publication-item{
-		width: 100%;
-		text-decoration: none;
-		line-height: 1.4;
-		padding: 1em 1.3em;
-		border-radius: 0.35rem;
-		color: var(--text-color);
-		background-color: white;
-		opacity: 0.8;
-		margin-top: 1rem;
-	}
-	.publication-item > h6{
-		color:grey;
-	}
-	.publication-item:is(:hover, :focus-within) h4 {
-		color: #26a1c0 ;
-	}
-	.publication-item:is(:hover, :focus-within) h6 {
-		color: #a1c8e9 ;
-	}
-	.publication-item:hover {
-  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.74);
-}
-
-
-	</style>
-	
