--- a/src/components/Timeline.astro
+++ b/src/components/Timeline.astro
@@ -1,117 +1,23 @@
-<ul role="list" class="link-card-list">
-	<li class="link-card">
-	<h2>My career</h2>
-		<ul role="list" class="timeline-list">
-			<li class="timeline-item">
-			<p class="">  
-				<h4 class="">2012-2015</h4>
-				<h6>Politecnico di Torino</h6>
-				Bachelor degree in Physisc Engineering 
-				</p>
-			</li>
-			<li class="timeline-item">
-				<p class="">
-				<h4 class="">2015-2018</h4>
-				<h6>Politecnico di Torino</h6>
-				Master degree in ICT for Smart Societies with the thesis  
-				"Desing and development of a novel smart-meter for improved Smart Grid management"
-				</p>
-			</li>
-			<li class="timeline-item">
-				<p class="">
-				<h4 class="">2018-2019</h4>	
-				<h6>Politecnico di Torino</h6>
-				Assistant researcher for EDA group
-			</p>
-			</li>
-			<li class="timeline-item">
-				<p class="">
-				<h4 class="">2019-ongoing</h4>
-				<h6>Politecnico di Torino</h6>	
-				PhD student in Computer and Control Engineering
-			</p>
-			</li>
-		</ul>
-	</li>
-</ul>
-<style>
-:root {
-		--color-border: #a1c8e9 ;
-		--astro-gradient: linear-gradient(0deg,#4F39FA, #DA62C4);
-		--link-gradient: linear-gradient(45deg, #4F39FA, #DA62C4 30%, var(--color-border) 60%);
-		--night-sky-gradient: linear-gradient(0deg, #392362 -33%, #431f69 10%, #30216b 50%, #1f1638 100%);
-		--matteo-gradient:linear-gradient(0deg, #26a1c0 0%, #2b9efd 33%, #26a1c0 66%, #2b9efd 99%);
-		--bkg-gradient:linear-gradient(45deg, #26a1c0 0%, #a1c8e9  30%, var(--color-border) 60%);
-	}
-	h2 {
-		margin: 0;
-		transition: color 0.6s cubic-bezier(0.22, 1, 0.36, 1);
-	}
+<li class="link-card">
+  <h2>My career</h2>
+  <div class="item"><h4 >2012-2015</h4>
+  <h5>Politecnico di Torino</h5>
+  <p>Bachelor degree in Physisc Engineering</p>
+</div>
+  <div class="item"><h4 >2015-2018</h4>
+  <h5>Politecnico di Torino</h5>
+  <p>
+    Master degree in ICT for Smart Societies with the thesis "Desing and development
+    of a novel smart-meter for improved Smart Grid management"
+  </p>
+</div>
+  <div class="item"><h4 >2018-2019</h4>
+  <h5>Politecnico di Torino</h5>
+  <p>Assistant researcher for EDA group</p>
+</div>
+  <div class="item"><h4 >2019-ongoing</h4>
+  <h5>Politecnico di Torino</h5>
+ <p>PhD student in Computer and Control Engineering </p>
+</div>
+</li>
 
-	.link-card {
-		margin-top: 1rem;
-		margin-bottom: 1rem;
-	  	margin-left: 0rem;
-		margin-right: 0rem;
-		display: block;
-		padding: 1rem;
-		background-image: var(--bkg-gradient);
-		background-size: 400%;
-		border-radius: 0.5rem;
-		background-position: 100%;
-		transition: background-position 0.6s cubic-bezier(0.22, 1, 0.36, 1);
-	}
-
-	.link-card > p {
-		width: 100%;
-		text-decoration: none;
-		line-height: 1.4;
-		padding: 1em 1.3em;
-		border-radius: 0.35rem;
-		color: var(--text-color);
-		background-color: white;
-		opacity: 0.8;
-	}
-
-	.link-card:is(:hover, :focus-within) {
-		background-position: 0;
-	}
-
-	.link-card:is(:hover, :focus-within) h2 {
-		color: #fff;
-	}
-
-	.link-card:is(:hover, :focus-within) h2 span {
-		transform: translateX(2px);
-	}
-	
-	.timeline-list{
-		display: block;
-		gap: 1rem;
-	}
-	.timeline-item{
-		width: 100%;
-		text-decoration: none;
-		line-height: 1.4;
-		padding: 1em 1.3em;
-		border-radius: 0.35rem;
-		color: var(--text-color);
-		background-color: white;
-		opacity: 0.8;
-		margin-top: 1rem;
-	}
-	.timeline-item > h6{
-		color:grey;
-	}
-	.timeline-item:is(:hover, :focus-within) h4 {
-		color: #26a1c0 ;
-	}
-	.timeline-item:is(:hover, :focus-within) h6 {
-		color: #a1c8e9 ;
-	}
-	.timeline-item:hover {
-  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.74);
-}
-
-
-	</style>
