--- a/src/components/Whoami.astro
+++ b/src/components/Whoami.astro
@@ -1,55 +1,13 @@
 <li class="link-card">
   <h2 class="">What I studied</h2>
+	<div class="item">
   <p class="">
     I received B.Sc Degree in Physics Engineering in 2015 and a M.Sc. degree in
     ICT for Smart Societies in 2018 with a thesis focused on designing and
     development of a self-configuring IoT smart-meter for monitoring the power
     grids and enabling novel services. Since October 2018, I joined the EDA
-    group as a research assistant.I started my PhD in November 2019 focusing my
-    research in software architectures for simulation and co-simulation for
-    Smart Grids.
-  </p>
+    group as a research assistant. I started my PhD in November 2019 focusing my
+    research in the optimization of the placement of PV modules in the context of Renewable Energy Community.
+  </p></div>
 </li>
-<style>
-	:root {
-		--color-border: #a1c8e9 ;
-		--astro-gradient: linear-gradient(0deg,#4F39FA, #DA62C4);
-		--link-gradient: linear-gradient(45deg, #4F39FA, #DA62C4 30%, var(--color-border) 60%);
-		--night-sky-gradient: linear-gradient(0deg, #392362 -33%, #431f69 10%, #30216b 50%, #1f1638 100%);
-		--matteo-gradient:linear-gradient(0deg, #26a1c0 0%, #2b9efd 33%, #26a1c0 66%, #2b9efd 99%);
-		--bkg-gradient:linear-gradient(45deg, #26a1c0 0%, #a1c8e9  30%, var(--color-border) 60%);
-	}
 
-	.link-card {
-	  	margin: 0;
-		display: block;
-		padding: 1rem;
-		background-image: var(--bkg-gradient);
-		background-size: 400%;
-		border-radius: 0.5rem;
-		background-position: 100%;
-		transition: background-position 0.6s cubic-bezier(0.22, 1, 0.36, 1);
-	}
-
-	.link-card > p {
-		width: 100%;
-		text-decoration: none;
-		line-height: 1.4;
-		padding: 1em 1.3em;
-		border-radius: 0.35rem;
-		color: var(--text-color);
-		background-color: white;
-		opacity: 0.8;
-	}
-
-	.link-card:is(:hover, :focus-within) {
-		background-position: 0;
-	}
-
-	.link-card:is(:hover, :focus-within) h2 {
-		color: #fff;
-	}
-
-	.link-card:is(:hover, :focus-within) h2 span {
-		transform: translateX(2px);
-	}</style>
