--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,168 +1,130 @@
 ---
-import Layout from '../components/Layout.astro';
-import Presentation from '../components/Presentation.astro';
-import Header from '../components/Header.vue';
-import Whoami from '../components/Whoami.astro';
-import Timeline from '../components/Timeline.astro';
-//import Publications from '../components/Publications.astro';
-import Publications from '../components/Publications.vue';
-import Projects from '../components/Projects.astro';
+import Layout from "../components/Layout.astro";
+import Presentation from "../components/Presentation.astro";
+import Whoami from "../components/Whoami.astro";
+import Timeline from "../components/Timeline.astro";
+import Publications from "../components/Publications.astro";
+//import Publications from '../components/Publications.vue';
+import Projects from "../components/Projects.astro";
 ---
 
 <Layout title="Matteo Orlando">
-	<main>
-		<!-- <Header /> -->
-		<Presentation/>
-		
-		<!-- <p class="instructions"><strong>Your first mission:</strong> tweak this message to try our hot module reloading. Check the <code>src/pages</code> directory!</p> -->
+  <main>
+    <!-- <Header /> -->
+    <Presentation />
 
-		<Whoami />
-		<Timeline />
-		<Publications/>
-		<Projects/>
+    <!-- <p class="instructions"><strong>Your first mission:</strong> tweak this message to try our hot module reloading. Check the <code>src/pages</code> directory!</p> -->
 
-	</main>
+    <Whoami />
+    <Timeline />
+    <Publications />
+    <Projects />
+  </main>
 </Layout>
 
-<style>
-	:root {
-		--color-border: #a1c8e9;
-		--astro-gradient: linear-gradient(0deg,#4F39FA, #DA62C4);
-		--link-gradient: linear-gradient(45deg, #4F39FA, #DA62C4 30%, var(--color-border) 60%);
-		--night-sky-gradient: linear-gradient(0deg, #392362 -33%, #431f69 10%, #30216b 50%, #1f1638 100%);
-		--matteo-gradient:linear-gradient(0deg, #26a1c0 0%, #2b9efd 33%, #26a1c0 66%, #2b9efd 99%);
-		--bkg-gradient:linear-gradient(45deg, #26a1c0 0%, #a1c8e9 30%, var(--color-border) 60%);
-	}
+<style is:global>
+  :root {
+    --color-border: #a1c8e9;
+    --astro-gradient: linear-gradient(0deg, #4f39fa, #da62c4);
+    --link-gradient: linear-gradient(
+      45deg,
+      #4f39fa,
+      #da62c4 30%,
+      var(--color-border) 60%
+    );
+    --night-sky-gradient: linear-gradient(
+      0deg,
+      #392362 -33%,
+      #431f69 10%,
+      #30216b 50%,
+      #1f1638 100%
+    );
+    --matteo-gradient: linear-gradient(
+      0deg,
+      #26a1c0 0%,
+      #2b9efd 33%,
+      #26a1c0 66%,
+      #2b9efd 99%
+    );
+    --bkg-gradient: linear-gradient(
+      45deg,
+      #26a1c0 0%,
+      #a1c8e9 30%,
+      var(--color-border) 60%
+    );
+  }
+  body{
+	  width: 95%;
+	margin: auto;
+  }
+  h2 {
+    transition: color 0.6s cubic-bezier(0.22, 1, 0.36, 1);
+  }
 
-	h2 {
-		margin: 0;
-		transition: color 0.6s cubic-bezier(0.22, 1, 0.36, 1);
-	}
+  .link-card {
+	margin: 0.5rem 0 0.5rem 0;
+    display: block;
+    padding: 1rem;
+    background-image: var(--bkg-gradient);
+    background-size: 400%;
+    border-radius: 0.5rem;
+    background-position: 100%;
+    transition: background-position 0.6s cubic-bezier(0.22, 1, 0.36, 1);
+  }
 
-	h2 span {
-		display: inline-block;
-		transition: transform 0.3s cubic-bezier(0.22, 1, 0.36, 1);
-	}
+  .link-card > p {
+    width: 100%;
+    text-decoration: none;
+    line-height: 1.4;
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
+    padding-top: 0;
+    padding-bottom: 0;
+    border-radius: 0.35rem;
+    color: var(--text-color);
+    background-color: white;
+    opacity: 0.8;
+  }
 
-	code {
-		font-size: 0.875em;
-		border: 0.1em solid var(--color-border);
-		border-radius: 4px;
-		padding: 0.15em 0.25em;
-	}
+  .link-card:is(:hover, :focus-within) {
+    background-position: 0;
+  }
 
-	main {
-		margin: auto;
-    padding: 1em;
-		max-width: 80ch;
-	}
+  .link-card:is(:hover, :focus-within) h2 {
+    color: #fff;
+  }
 
-	.text-gradient {
-		font-weight: 900;
-		background-image: var(--astro-gradient);
-		-webkit-background-clip: text;
-  	-webkit-text-fill-color: transparent;
-		background-size: 100% 200%;
-		background-position-y: 100%;
-		border-radius: 0.4rem;
-		animation: pulse 4s ease-in-out infinite;
-	}
-	.name-gradient {
-		font-weight: 900;
-		background-image: var(--matteo-gradient);
-		-webkit-background-clip: text;
-  	-webkit-text-fill-color: transparent;
-		background-size: 200% 200%;
-		background-position-y: 100%;
-		border-radius: 0.4rem;
-		animation: pulse 4s ease-in-out infinite;
-	}
+  .link-card:is(:hover, :focus-within) h2 span {
+    transform: translateX(2px);
+  }
 
-	@keyframes pulse {
-		0%, 100% {
-			background-position-y: 0%;
-		}
-		50% {
-			background-position-y: 80%;
-		}
-	}
-
-	.instructions {
-		line-height: 1.8;
-		margin-bottom: 2rem;
-		background-image: var(--night-sky-gradient);
-		padding: 1.5rem;
-		border-radius: 0.4rem;
-		color: var(--color-bg);
-	}
-
-	.link-card-grid {
-		display: grid;
-		grid-template-columns: repeat(auto-fit, minmax(24ch, 1fr));
-		gap: 1rem;
-		padding: 0;
-	}
-	.link-card-list{
-		display: block;
-		grid-template-columns: repeat(auto-fit, minmax(24ch, 1fr));
-		gap: 1rem;
-		padding: 2;
-	}
-
-	.link-card {
-		list-style: none;
-		display: flex;
-		padding: 2rem;
-		background-image: var(--bkg-gradient);
-		background-size: 400%;
-		border-radius: 0.5rem;
-		background-position: 100%;
-		transition: background-position 0.6s cubic-bezier(0.22, 1, 0.36, 1);
-	}
-
-	.link-card > a {
-		width: 100%;
-		text-decoration: none;
-		line-height: 1.4;
-		padding: 1em 1.3em;
-		border-radius: 0.35rem;
-		color: var(--text-color);
-		background-color: white;
-		opacity: 0.8;
-	}
-
-	.link-card:is(:hover, :focus-within) {
-		background-position: 0;
-	}
-
-	.link-card:is(:hover, :focus-within) h2 {
-		color: #4F39FA;
-	}
-
-	.link-card:is(:hover, :focus-within) h2 span {
-		transform: translateX(2px);
-	}
-
-	.heart {
-		display: inline-block;
-		color: #DA62C4;
-		animation: heartbeat 3s ease-in-out infinite;
-	}
-
-	@keyframes heartbeat {
-		0%,
-		50%,
-		100% {
-			transform: scale(1);
-		}
-		5% {
-			transform: scale(1.125);
-		}
-		10% {
-			transform: scale(1.05);
-		}
-		15% {
-			transform: scale(1.25);
-		}
-	}
+  .item {
+    text-decoration: none;
+    line-height: 1.4;
+    border-radius: 0.35rem;
+    color: var(--text-color);
+    background-color: white;
+    opacity: 0.8;
+    padding-left: 0.8rem;
+    padding-right: 0.8rem;
+    padding-top: 0;
+	margin:0 0.5rem 0.5rem 0;
+  }
+  .item>p{
+	  padding: 1rem;
+	  margin-top: 0%;
+  }
+  h4 {
+    margin: 0rem;
+    padding-top: 1.2rem;
+  }
+  h5 {
+    color: gray;
+    margin: 0rem;
+    padding: 1rem;
+  }
+  details{
+	  padding-top:1rem;
+	  padding-bottom:1rem;
+  }
 </style>
