--- a/src/components/Whoami.astro
+++ b/src/components/Whoami.astro
@@ -18,8 +18,8 @@ const otherSkills = [
 ];
 ---
 
-<li class="link-card">
-    <h2 class="">What I studied</h2>
+<li id="WHOAMI" class="link-card">
+    <h2 class="subtitle">What I studied</h2>
     <div class="item">
         <p class="">
             I received B.Sc Degree in Physics Engineering in 2015 and a M.Sc.
