--- a/src/components/Timeline.astro
+++ b/src/components/Timeline.astro
@@ -1,23 +1,27 @@
-<li class="link-card">
-  <h2>My career</h2>
-  <div class="item"><h4 >2012-2015</h4>
-  <h5>Politecnico di Torino</h5>
-  <p>Bachelor degree in Physisc Engineering</p>
-</div>
-  <div class="item"><h4 >2015-2018</h4>
-  <h5>Politecnico di Torino</h5>
-  <p>
-    Master degree in ICT for Smart Societies with the thesis "Desing and development
-    of a novel smart-meter for improved Smart Grid management"
-  </p>
-</div>
-  <div class="item"><h4 >2018-2019</h4>
-  <h5>Politecnico di Torino</h5>
-  <p>Assistant researcher for EDA group</p>
-</div>
-  <div class="item"><h4 >2019-ongoing</h4>
-  <h5>Politecnico di Torino</h5>
- <p>PhD student in Computer and Control Engineering </p>
-</div>
+<li id="CAREER" class="link-card">
+    <h2 class="subtitle">My career</h2>
+    <div class="item">
+        <h4>2012-2015</h4>
+        <h5>Politecnico di Torino</h5>
+        <p>Bachelor degree in Physisc Engineering</p>
+    </div>
+    <div class="item">
+        <h4>2015-2018</h4>
+        <h5>Politecnico di Torino</h5>
+        <p>
+            Master degree in ICT for Smart Societies with the thesis "Desing and
+            development of a novel smart-meter for improved Smart Grid
+            management"
+        </p>
+    </div>
+    <div class="item">
+        <h4>2018-2019</h4>
+        <h5>Politecnico di Torino</h5>
+        <p>Assistant researcher for EDA group</p>
+    </div>
+    <div class="item">
+        <h4>2019-ongoing</h4>
+        <h5>Politecnico di Torino</h5>
+        <p>PhD student in Computer and Control Engineering</p>
+    </div>
 </li>
-
