change wrap for presentation

--- a/src/components/Presentation.astro
+++ b/src/components/Presentation.astro
@@ -107,7 +107,7 @@ import avatar from "/avatar.jpg";
     .presentation-grid {
         display: flex; /* or inline-flex */
         justify-content: space-evenly;
-        flex-wrap: wrap;
+        flex-wrap: wrap-reverse;
         padding-bottom: 0.5rem;
     }
 
