--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -231,6 +231,98 @@ const { title } = Astro.props as Props;
                     display: none;
                 }
             }
+            .name-gradient {
+                background: linear-gradient(
+                    45deg,
+                    var(--primary) -1.72%,
+                    var(--secondary) 99.78%
+                );
+                background-size: auto;
+                background-clip: border-box;
+                -webkit-background-clip: text;
+                -webkit-text-fill-color: transparent;
+                background-clip: text;
+                text-fill-color: transparent;
+                background-size: 150% 150%;
+                -webkit-animation: gradient 15s ease infinite;
+                animation: gradient 15s ease infinite;
+            }
+            .name {
+                color: var(--primary);
+            }
+            .surname {
+                color: var(--secondary);
+            }
+
+            @keyframes pulse {
+                0%,
+                100% {
+                    background-position-y: 0%;
+                }
+
+                50% {
+                    background-position-y: 80%;
+                }
+            }
+
+            .presentation-grid {
+                display: flex; /* or inline-flex */
+                justify-content: space-evenly;
+                flex-wrap: wrap-reverse;
+                padding-bottom: 0.5rem;
+            }
+
+            .presentation-text {
+                flex: 0.7;
+            }
+
+            .presentaion-avatar {
+                margin: auto;
+            }
+            .presentaion-avatar img {
+                background-size: cover;
+                background-position: center;
+                border-radius: 50%;
+                border: 0em solid var(--primary);
+                box-shadow: 0 0.1em 1em -0.1em var(--secondary);
+                width: 20vw;
+                min-width: 160px;
+                max-width: 250px;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+
+                text-align: center;
+            }
+            h1 {
+                font-size: 3.5rem;
+            }
+            .hint {
+                position: fixed;
+                bottom: 2%;
+                right: 2%;
+                z-index: 1;
+                background-color: var(--secondary);
+                border: solid 0.2rem var(--secondary);
+                border-radius: 50%;
+                width: 3rem;
+                height: 3rem;
+                box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.6);
+                transition: all 0.3s ease 0s;
+                cursor: pointer;
+            }
+            .hint:hover {
+                background-color: var(--primary);
+                border: solid 0.2rem var(--primary);
+                box-shadow: 0px 15px 20px rgba(46, 229, 157, 0.4);
+                color: #000;
+                transform: translateY(-7px);
+            }
+            .icon {
+                border: 0;
+                width: 2rem;
+                height: 2rem;
+            }
         </style>
     </body>
 </html>
