--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,6 +7,7 @@ import Publications from "../components/Publications.astro";
 //import Publications from '../components/Publications.vue';
 import Projects from "../components/Projects.astro";
 import Navbar from "../components/Navbar.astro";
+import PDF from "../components/PDF.astro";
 ---
 
 <Layout title="Matteo Orlando">
@@ -16,7 +17,7 @@ import Navbar from "../components/Navbar.astro";
 
         <Navbar />
         <!-- <p class="instructions"><strong>Your first mission:</strong> tweak this message to try our hot module reloading. Check the <code>src/pages</code> directory!</p> -->
-
+        <PDF />
         <Whoami />
         <Timeline />
         <Publications />
