Added free time, changed name css, print css

--- a/src/components/Presentation.astro
+++ b/src/components/Presentation.astro
@@ -5,8 +5,7 @@ import avatar from "/avatar.jpg";
 <div class="presentation-grid">
     <div class="presentation-text">
         <h1>
-            Hi, I'm <span class="name">Matteo</span>
-            <span class="surname">Orlando</span>
+            Hi, I'm <span class="name-gradient">Matteo Orlando</span>
         </h1>
     </div>
     <div class="presentaion-avatar">
