--- a/src/components/Timeline.astro
+++ b/src/components/Timeline.astro
@@ -22,6 +22,13 @@
     <div class="item">
         <h4>2019-ongoing</h4>
         <h5>Politecnico di Torino</h5>
-        <p>PhD student in Computer and Control Engineering</p>
+        <p>
+            PhD student in Computer and Control Engineering
+            <br />
+            <br />
+            Assistant teacher for the Master Degree Course <b
+                >Programming for IoT</b
+            > @ Politecnico di Torino
+        </p>
     </div>
 </li>
