--- a/src/components/Whoami.astro
+++ b/src/components/Whoami.astro
@@ -19,8 +19,9 @@ const otherSkills = [
 ---
 
 <li id="WHOAMI" class="link-card">
-    <h2 class="subtitle">What I studied</h2>
+    <h2 class="subtitle">Whoami</h2>
     <div class="item">
+        <h4>What I studied</h4>
         <p class="">
             I received B.Sc Degree in Physics Engineering in 2015 and a M.Sc.
             degree in ICT for Smart Societies in 2018 with a thesis focused on
@@ -50,5 +51,14 @@ const otherSkills = [
                 ))
             }
         </div>
+    </div>
+    <div class="item">
+        <h4>Free time</h4>
+        <p>
+            During my free time I enjoy tinkering with other tech stuff outside
+            of my main job topics: 3D printing, web programming etc. When I'm
+            not in front of a screen I'm usually playing guitar or piano to
+            relax.
+        </p>
     </div>
 </li>
