--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -217,6 +217,10 @@ const { title } = Astro.props as Props;
             @media screen and (max-width: 910px) {
                 .openbtn {
                     display: block;
+                    padding-top: 0.5rem;
+                    position: sticky;
+                    top: 0px;
+                    z-index: 1;
                     border: 0;
                     width: 100%;
                     border-radius: 0.5rem;
@@ -227,8 +231,10 @@ const { title } = Astro.props as Props;
                     );
                     color: var(--secondary);
                 }
-                .navbar {
+                .nav-item {
                     display: none;
+                    background: none;
+                    width: auto;
                 }
             }
             .name-gradient {
